# WaveSnow_4.2_RLCD

./: .gitignore  CMakeLists.txt  README.md  sdkconfig.defaults
components/codec_board/: CMakeLists.txt  board_cfg.txt  codec_init.c
components/codec_board/drv/: tca9554.c
main/: CMakeLists.txt  app_main.cpp  penguin_bitmap.h  penguin_original_bitmap.h  rlcd_st7305.cpp  rlcd_st7305.h
tools/: codex_usage_server.py  extract_bead_pattern.py  generate_penguin_bitmap.py
